package-parser: Clean.